# runtime

./: .bazel_redirect.cfg  .bazelrc  .gitignore  BUILD.bazel  Doxyfile  Makefile  README.en.md  README.md  README_EN.md  WORKSPACE  benchmark.py  build.sh  config.sh  ruff.toml
.gitee/ISSUE_TEMPLATE/: 001-bug-report.yml  002-documentation.yml  003-feature-request.yml  004-RFC.yml
.gitee/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.en.md  PULL_REQUEST_TEMPLATE.zh-cn.md
.gitee/PULL_REQUST_TEMPLATE/: PULL_REQUST_TEMPLATE.en.md  PULL_REQUST_TEMPLATE.zh-cn.md
.skill/gitcode/: SKILL.md
api/cpp/: BUILD.bazel
api/cpp/example/: collective_example.cpp  faas_example.cpp  faas_example1.cpp
api/cpp/src/: cluster_mode_runtime.cpp
api/go/: BUILD.bazel
api/go/faassdk/: runtime.go
api/go/posixsdk/: runtime.go
api/go/yr/: cluster_mode_runtime.go  cluster_mode_runtime_test.go  config_manager.go
api/java/: BUILD.bazel
api/python/: BUILD.bazel  requirements_for_py311.txt  requirements_for_py36.txt  requirements_for_py37.txt  setup.py
api/python/yr/: __init__.py  apis.py  base_runtime.py  cluster_mode_runtime.py  code_manager.py  config.py  config_manager.py  fnruntime.pyx  group.py  log.py  metrics.py  resource_group.py  runtime_holder.py  session_service.py
bazel/: datasystem_sdk.bzl  gloo.bzl  metrics_sdk.bzl  preload_grpc.bzl
common/litebus/: CMakeLists.txt  build.sh  litebus.cmake
common/litebus/script/: run_code_coverage.sh
common/logs/: CMakeLists.txt  build.sh  common.sh
common/metrics/: CMakeLists.txt  build.sh  metrics.cmake
common/metrics/src/exporters/file_exporter/: CMakeLists.txt
deploy/data_system/: install.sh
deploy/process/: config.sh  deploy.sh  health_check.sh  port_utils.sh  utils.sh  yr_stop.sh
docs/: README.md  build.sh  conf.py  getting_started.md  index.rst  requirements_dev.txt
docs/_static/: custom.css  language-switcher.js  versions.json
docs/_templates/: custom-index.html  navbar-links.html
docs/contributor_guide/: contribution_doc.md  source_code_build.md
docs/deploy/: build_and_deploy.md  index.md  installation.md
docs/deploy/deploy_on_k8s/: index.md
docs/deploy/deploy_processes/: parameters.md  single-node-deployment.md
docs/deploy/job_app_guide/: index.md
docs/more_usage/: index.md  use_datasystem_alone.md
docs/multi_language_function_programming_interface/: index.md
docs/multi_language_function_programming_interface/advanced_tutorials/: index.md  use_nested_call.md  yr_shutdown.md
docs/multi_language_function_programming_interface/api/: error_code.md  index.md
docs/multi_language_function_programming_interface/examples/: affinity.md  cross_language_invoke.md  index.md  (+4 more)
docs/observability/: dashboard.md  logs.md  traces.md
docs/reference/: index.md  releases.md
docs/snippets/: install-cmd-with-whl.md
docs/source_en/: Makefile  blog_data.py  conf.py  getting_started.md  icons.py  index.rst  security.md
docs/source_zh_cn/: conf.py  getting_started.md
docs/use_cases/: accelerate_llm_instance_scaling.md  index.md  llm_on_multiple_machines.md  microservice-serverless.md
example/: real_id_example.py  test_idle_timeout.py
functionsystem/: CMakeLists.txt  build.sh  build_golang.sh  go.mod
functionsystem/cmake/: funcs.cmake
functionsystem/src/: CMakeLists.txt
functionsystem/src/common/: CMakeLists.txt
functionsystem/src/common/leader/: k8s_leader_actor.cpp
functionsystem/src/common/proto/: .gitignore
functionsystem/src/common/schedule_decision/performer/: group_schedule_performer.cpp
functionsystem/src/function_master/scaler/: CMakeLists.txt  constants.h  scaler_actor.cpp  scaler_actor.h  scaler_driver.cpp  scaler_driver.h
functionsystem/src/function_master/scaler/pool/: pool_manager.cpp  pool_manager.h
functionsystem/src/function_master/scaler/system_function_pod_manager/: system_function_pod_manager.cpp  system_function_pod_manager.h
functionsystem/src/function_master/scaler/utils/: parse_helper.cpp  parse_helper.h  system_upgrade_switch_utils.h
functionsystem/src/function_master/system_function_loader/: CMakeLists.txt  README.md  bootstrap_actor.cpp  bootstrap_actor.h  bootstrap_driver.cpp  bootstrap_driver.h  constants.h
functionsystem/src/iam_server/: CMakeLists.txt  main.cpp
functionsystem/src/iam_server/driver/: iam_driver.cpp
functionsystem/src/iam_server/iam/iam_actor/: iam_actor.cpp  iam_actor.h
functionsystem/src/iam_server/iam/internal_iam/: aksk_manager_actor.cpp  aksk_manager_actor.h  internal_iam.cpp  internal_iam.h  token_manager_actor.h
go/: build.sh  go.mod
patch/: gloo-fix-sign-compare.patch
proto/inner/: bus_service.proto  common.proto  core_service.proto  inner_service.proto  log_service.proto  message.proto  resource.proto
proto/posix/: common.proto
scripts/: basic_build.sh  package_yuanrong.sh
scripts/config/: pyproject.toml
scripts/config/meta_service/: metaservice_config.json
scripts/executor/: download_opensource.py  make_functionsystem.py  run_code_gate.py
scripts/package/: utils.sh
src/dto/: config.h  invoke_options.h
src/libruntime/: auto_init.cpp  auto_init.h  invoke_order_manager.cpp  invoke_order_manager.h  invoke_spec.cpp  invoke_spec.h  libruntime.cpp  libruntime.h  libruntime_config.h
src/utility/: BUILD.bazel  string_utility.h
test/: BUILD.bazel
test/api/: cluster_mode_runtime_test.cpp  code_manager_test.cpp  function_executor_test.cpp  local_mode_test.cpp
test/clibruntime/: clibruntime_test.cpp
test/libruntime/: aes_crypto_test.cpp  agent_session_manager_test.cpp  ak_sk_manager_test.cpp  auto_init_test.cpp  clients_manager_test.cpp  faas_instance_manager_test.cpp  gw_client_test.cpp  http_utils_test.cpp  invoke_adaptor_test.cpp  invoke_collector_test.cpp  invoke_order_manager_test.cpp  kv_state_store_test.cpp  libruntime_test.cpp  metrics_adaptor_test.cpp  named_group_test.cpp  object_store_test.cpp  security_test.cpp  task_submitter_test.cpp
test/st/: prepare_and_start_yr.sh  test.sh
test/utility/: timer_worker_test.cpp
tools/: download_dependency.sh  download_opensource.sh  openSource.txt
(+1493 files in other folders)
